# mycalc

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: doc.yml  test.yml
docs/: 404.html  cli.md  index.html  index.md  objects.inv  sitemap.xml
docs/cli/: index.html
docs/search/: search_index.json
src/mycalc/cli/: mycalculator.py
tests/: test_calc.py
