[project]
name = "mycalc"
version = "0.1.0"
description = ""
authors = [
    {name = "David Wikler",email = "david.wikler@ulb.ac.be"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "mycalc", from = "src"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocs-material = "^9.6.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
